# Potentiostat

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: pyproject.toml
app/powershell/: compileUI.ps1  serialToCSV.ps1
app/resources/qrc/: uiResources.qrc
app/resources/translation/: mainWindow_es_ES.qm  mainWindow_es_ES.ts  mainWindow_pt_PT.ts
app/resources/ui/: mainWindow.ui
app/src/: main.py
app/src/managers/: __init__.py  calculator.py  circuit.py  cycles.py  plot.py  serial.py
app/src/ui/: __init__.py  mainWindowUi.py  uiResourcesRc.py
app/src/utils/: config.py
app/src/windows/: __init__.py  mainWindow.py
device/: CalculosCircuito.xlsx
device/arduino/Potentiostat/: Board.cpp  Board.h  Circuit.cpp  Circuit.h  Cycles.cpp  Cycles.h  Potentiostat.ino
device/esp32/Potentiostat/: Board.h  Circuit.cpp  Circuit.h  Commands.h  Cycles.cpp  Cycles.h  Leds.cpp  Potentiostat.ino
device/src/Potentiostat/: Board.h  Circuit.cpp  Circuit.h  Commands.h  Cycles.cpp  Cycles.h  Leds.h  Potentiostat.ino
